[package]
name = "dmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_nmap = {version="0.1.3"}
savefile="0.10.1"
bincode = "2.0.0-rc.1"
savefile-derive="0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5.0"
sha2 = "0.10.2"
base16ct = { version = "0.1.1", features = ["std", "alloc"] }
dirs = "4.0.0"
mkdirp = "1.0.0"
actix-web = "4"
actix-files = "0.6.0"
actix-multipart = "0.4.0"
futures-util = "0.3.21"
actix-web-httpauth = "0.6.0"
lazy_static = "1.4.0"
